# LAOI

./: Aoi.cpp  AoiContext.cpp  AoiTrigger.cpp  CMakeLists.txt  TriggerMarker.cpp  aoi.h  main.cpp
Share/Debug/: laoi.ilk
aoi/: AoiContext.cpp  AoiContext.h  CMakeLists.txt  TriggerMarker.cpp  TriggerMarker.h  Vector2.h  main.cpp
core/: Aoi.cpp  AoiEntity.cpp  AoiEntity.h  AoiTrigger.cpp  AoiTrigger.h  TriggerMarker.cpp  TriggerMarker.h  aoi.h
unittest/: CMakeLists.txt  main.cpp
